corrected overflow issue

--- a/style.css
+++ b/style.css
@@ -230,7 +230,6 @@ h1 {
 .container4 {
   width: 90%;
   height: 100%;
-  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   align-items: center;
